<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/title_image">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="imagequality"
            app:summary="@string/imagequality_sum"
            app:title="@string/imagequality" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/download_title">

        <com.waenhancer.preference.FileSelectPreference
            android:defaultValue="/sdcard/Download"
            app:directory="true"
            app:key="download_local"
            app:title="@string/local_download" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="downloadstatus"
            app:summary="@string/statusdowload_sum"
            app:title="@string/statusdowload" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="downloadviewonce"
            app:summary="@string/downloadviewonce_sum"
            app:title="@string/downloadviewonce" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/auto_status_forward_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="auto_status_forward"
            app:summary="@string/auto_status_forward_sum"
            app:title="@string/auto_status_forward" />

        <com.waenhancer.preference.StatusForwardRulesPreference
            app:dependency="auto_status_forward"
            app:key="auto_status_forward_rules_pref"
            app:title="@string/auto_status_forward_rules" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/call_recording_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="call_recording_enable"
            app:summary="@string/call_recording_enable_summary_latest"
            app:title="@string/call_recording_enable" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            app:dependency="call_recording_enable"
            app:key="call_recording_calls_tab_menu"
            app:summary="@string/call_recording_calls_tab_menu_summary"
            app:title="@string/call_recording_calls_tab_menu" />

        <com.waenhancer.preference.FileSelectPreference
            android:defaultValue="/sdcard/Download"
            app:dependency="call_recording_enable"
            app:directory="true"
            app:key="call_recording_path"
            app:title="@string/call_recording_path" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/recording_mode_entries"
            android:entryValues="@array/recording_mode_values"
            app:dependency="call_recording_enable"
            app:key="call_recording_mode"
            app:title="@string/recording_mode"
            app:useSimpleSummaryProvider="true" />

        <com.waenhancer.preference.ContactPickerPreference
            app:dependency="call_recording_enable"
            app:key="call_recording_whitelist"
            app:summaryOff="@string/recording_included_contacts_summary_off"
            app:summaryOn="@string/recording_included_contacts_summary_on"
            app:title="@string/recording_included_contacts" />

        <com.waenhancer.preference.ContactPickerPreference
            app:dependency="call_recording_enable"
            app:key="call_recording_blacklist"
            app:summaryOff="@string/recording_excluded_contacts_summary_off"
            app:summaryOn="@string/recording_excluded_contacts_summary_on"
            app:title="@string/recording_excluded_contacts" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="false"
            app:dependency="call_recording_enable"
            app:key="call_recording_toast"
            app:summary="@string/call_recording_toast_summary"
            app:title="@string/call_recording_toast_title" />

        <Preference
            app:dependency="call_recording_enable"
            app:key="call_recording_settings"
            app:summary="@string/recording_mode_description"
            app:title="@string/call_recording_settings" />

        <Preference
            app:dependency="call_recording_enable"
            app:key="call_recording_manage"
            app:summary="@string/call_recording_manage_summary"
            app:title="@string/call_recording_manage" />

        <rikka.material.preference.MaterialSwitchPreference
            android:enabled="false"
            app:key="video_call_screen_rec"
            app:summary="@string/coming_soon"
            app:title="@string/video_call_screen_rec" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/title_video">

        <com.waenhancer.preference.FloatSeekBarPreference
            android:defaultValue="60"
            app:key="video_limit_size"
            app:maxValue="90"
            app:minValue="30"
            app:title="@string/increase_video_size_limit"
            app:valueSpacing="10" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="videoquality"
            app:summary="@string/videoquality_sum"
            app:title="@string/videoquality" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="videoquality"
            app:key="video_real_resolution"
            app:summary="@string/send_video_in_real_resolution_sum"
            app:title="@string/send_video_in_real_resolution" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="videoquality"
            app:key="video_maxfps"
            app:summary="@string/send_video_in_60fps_sum"
            app:title="@string/send_video_in_60fps" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="send_video_as_video_note"
            app:summary="@string/send_video_as_video_note_sum"
            app:title="@string/send_video_as_video_note" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/title_audio">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="disable_sensor_proximity"
            app:summary="@string/disable_the_proximity_sensor_sum"
            app:title="@string/disable_the_proximity_sensor" />


        <rikka.material.preference.MaterialSwitchPreference
            app:key="proximity_audios"
            app:summary="@string/disable_audio_sensor_sum"
            app:title="@string/disable_audio_sensor" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/audio_type_buttons"
            android:entryValues="@array/audio_type_values"
            android:summary="@string/send_audio_as_voice_audio_note_sum"
            app:key="audio_type"
            app:title="@string/send_audio_as_voice_audio_note" />

        <com.waenhancer.preference.FloatSeekBarPreference
            android:defaultValue="2"
            app:key="voicenote_speed"
            app:maxValue="5"
            app:minValue="0.1"
            app:title="@string/voice_note_speed" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="audio_transcription"
            app:summary="@string/audio_transcription_sum"
            app:title="@string/audio_transcription" />

        <ListPreference
            android:dependency="audio_transcription"
            android:defaultValue="assemblyai"
            android:entries="@array/transcription_provider_entries"
            android:entryValues="@array/transcription_provider_values"
            app:key="transcription_provider"
            app:summary="@string/transcription_provider_sum"
            app:title="@string/transcription_provider" />

        <EditTextPreference
            android:dependency="audio_transcription"
            app:key="assemblyai_key"
            app:summary="@string/assemblyai_key_sum"
            app:title="@string/assemblyai_key" />

        <EditTextPreference
            android:dependency="audio_transcription"
            app:key="groq_api_key"
            app:summary="@string/groq_api_key_sum"
            app:title="@string/groq_api_key" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/other">

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="media_preview"
            app:summary="@string/enable_media_preview_sum"
            app:title="@string/enable_media_preview" />

    </PreferenceCategory>


</PreferenceScreen>
