<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/embedded_appearance">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="changecolor"
            app:summary="@string/colors_customization_sum"
            app:title="@string/colors_customization" />

        <ListPreference
            app:defaultValue="manual"
            app:dependency="changecolor"
            app:entries="@array/changecolor_mode_entries"
            app:entryValues="@array/changecolor_mode_values"
            app:key="changecolor_mode"
            app:summary="%s"
            app:title="@string/changecolor_mode" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="changecolor"
            app:key="primary_color"
            app:summary="@string/default_color"
            app:title="@string/primary_color" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="changecolor"
            app:key="background_color"
            app:summary="@string/default_color"
            app:title="@string/background_color" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="changecolor"
            app:key="text_color"
            app:summary="@string/default_color"
            app:title="@string/text_color" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="wallpaper"
            app:summary="@string/wallpaper_in_home_screen_sum"
            app:title="@string/wallpaper_in_home_screen" />

        <com.waenhancer.preference.FileSelectPreference
            android:entryValues="@array/image_picker"
            android:summary="@string/wallpaper_not_selected"
            app:dependency="wallpaper"
            app:key="wallpaper_file"
            app:title="@string/select_wallpaper" />

        <com.waenhancer.preference.FloatSeekBarPreference
            app:defaultValue="60"
            app:dependency="wallpaper"
            app:format="%.0f%%"
            app:key="wallpaper_alpha"
            app:maxValue="100"
            app:minValue="0"
            app:title="@string/wallpaper_transparency"
            app:valueSpacing="1" />

        <com.waenhancer.preference.FloatSeekBarPreference
            app:defaultValue="75"
            app:dependency="wallpaper"
            app:format="%.0f%%"
            app:key="wallpaper_alpha_toolbar"
            app:maxValue="100"
            app:minValue="0"
            app:title="@string/toolbar_transparency"
            app:valueSpacing="1" />

        <com.waenhancer.preference.FloatSeekBarPreference
            app:defaultValue="15"
            app:dependency="wallpaper"
            app:format="%.0f%%"
            app:key="wallpaper_alpha_navigation"
            app:maxValue="100"
            app:minValue="0"
            app:title="@string/navigation_transparency"
            app:valueSpacing="1" />

        <MultiSelectListPreference
            app:entries="@array/tabshide_contents"
            app:entryValues="@array/tabshide_values"
            app:key="hidetabs"
            app:summary="@string/hide_tabs_on_home_sum"
            app:title="@string/hide_tabs_on_home" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="bubble_color"
            app:summary="@string/change_blubble_color_sum"
            app:title="@string/change_bubble_colors" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="bubble_color"
            app:key="bubble_left"
            app:summary="@string/default_color"
            app:title="@string/bubble_left" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            app:cpv_showAlphaSlider="true"
            app:dependency="bubble_color"
            app:key="bubble_right"
            app:summary="@string/default_color"
            app:title="@string/bubble_right" />

        <ListPreference
            android:entries="@array/animations_names"
            app:defaultValue="default"
            app:entryValues="@array/animations_values"
            app:key="animation_list"
            app:summary="@string/list_animations_home_screen_sum"
            app:title="@string/list_animations_home_screen" />

    </PreferenceCategory>

</PreferenceScreen>
