<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general">

        <ListPreference
            app:entries="@array/thememode_entries"
            app:entryValues="@array/thememode_values"
            app:iconSpaceReserved="false"
            app:key="thememode"
            app:summary="%s"
            app:title="@string/theme_mode" />

        <ListPreference
            app:defaultValue="preset"
            app:entries="@array/wae_color_mode_entries"
            app:entryValues="@array/wae_color_mode_values"
            app:iconSpaceReserved="false"
            app:key="wae_color_mode"
            app:summary="%s"
            app:title="@string/wae_color_mode" />

        <ListPreference
            app:defaultValue="green"
            app:entries="@array/wae_color_preset_entries"
            app:entryValues="@array/wae_color_preset_values"
            app:iconSpaceReserved="false"
            app:key="wae_color_preset"
            app:summary="%s"
            app:title="@string/wae_color_preset" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="update_check"
            app:summary="@string/update_check_sum"
            app:title="@string/update_check" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="lite_mode"
            app:summary="@string/lite_mode_sum"
            app:title="@string/lite_mode" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="force_english"
            app:title="@string/force_english" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="enablelogs"
            app:title="@string/verbose_logs" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="show_hook_toast"
            app:summary="@string/show_hook_toast_sum"
            app:title="@string/show_hook_toast" />

    </PreferenceCategory>
</PreferenceScreen>
